style.css
@import url('https://fonts.googleapis.com/css?family=Roboto');

:root {
    --md-font-size: 1rem;
}

* {
    box-sizing: border-box;
    font-family: 'Roboto', serif;
}

body {
    margin: 0;
}

.main-container {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: auto 7fr;
}

/* SCROLLBAR */
::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-thumb {
    background: #188dcc;
    border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
    background: #11628d;
}

/* SIDEBAR */
.sidebar {
    background-color: #188dcc;
    color: white;
    font-weight: bolder;
    font-size: var(--md-font-size);
    grid-area: 1 / 1 / -1  / 2;
}

.sidebar-logo {
    font-size: 1.5rem;
    padding: 1rem 1rem 1rem 0.5rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.sidebar img {
    height: 1.35rem;
    filter: invert(100%);
}

.sidebar-logo > img {
    height: 2.5rem;
}

a, a:hover {
    text-decoration: inherit;
    color: inherit;
}

ul {
    list-style-type: none;
    padding: 0 1rem;
}

li {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.sidebar-content-1 > li:hover {
    cursor: pointer;
    background-color: #056599;
    transition: background-color .2s ease-in-out;
}

.sidebar-content-1 {
    padding: 0;
    margin-top: 1rem;
}

/* HEADER */
.header {
    background-color: #ffffff;
}

#header-hamburger {
    display: none;
}

.header-top {
    padding: 1.1rem 2.5rem;
    display: flex;
    justify-content: space-between;
}

.header-top-left, .header-top-right {
    display: flex;
    align-items: center;
    gap: 1rem;
    font-weight: bolder;
}

.header-top-left {
    margin-right: 6rem;
    flex: 1;
    max-width: 1000px;
}

/* MAIN */
.main-content {
    display: grid;
    grid-template-columns: 4fr;
    background-color: #e2e8f0;
    box-shadow: 0 -2px 5px -2px #888;
}

/* .projects {
    background-color: #e2e8f0;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
}

 .card-icons img {
    height: 1.5rem;
} */

.card-icons {
    float: right;
    height: 2rem;
    width: 2rem;
    line-height: 2rem;
    text-align: center;
    background-color: #E3F2FD;
    color: #42A5F5;
    border-radius: 5px;
}

.title {
    font-weight: bolder;
    font-size: 18px;
    padding: 1rem 0 0.4rem 1rem;
}

/* NAVBAR */
.overlay {
    height: 100%;
    width: 0;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.91);
    overflow-x: hidden;
    transition: 0.5s;
    z-index: 1;
}

.overlay-content {
    position: relative;
    top: 20%;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    gap: 1rem;
}

.overlay a {
    padding: 9px;
    color: #818181;
    display: block;
    font-size: 25px;
}

.overlay a:hover, .overlay a:focus {
    color: #f1f1f1;
}

.overlay #close {
    position: absolute;
    top: 15px;
    right: 35px;
    font-size: 2.25rem;
}

/* MESSAGES TAB */
.main-content .messages-list {
    display: flex;
    flex-direction: column;
    row-gap: 15px;
}

.main-content li .list-message-container {
    flex: 1;
    padding: 20px;
    box-shadow: 0 4px 24px -1px rgba(0, 0, 0, 0.1);
    background-color: rgba(255, 255, 255, 0.4);
    border-radius: 5px;
}

.main-content li .list-message-container span {
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.messages-container {
    padding: 1rem;
    display: flex;
    flex-direction: column;
}

.message {
    border: 2px solid #9ca3af;
    background-color: #f5f5f5;
    border-radius: 20px;
    padding: 1rem;
    margin: 0.5rem 0;
}

.gray {
    border-color: #4b5563;
    background-color: #e5e5e5;
    align-self: flex-end;
}

.message img {
    float: left;
    width: 55px;
    margin-right: 1rem;
    border-radius: 50%;
}

.message.gray img {
    float: right;
    margin-left: 20px;
    margin-right: 0;
}

.message span {
    float: right;
    color: #6b7280;
}

.message.gray span {
    float: left;
    color: #6b7280;
}

/* TASKS TAB */
.tasks-container {
    padding: 0 1.5rem;
}

.tasks {
    background-color: white;
    border-radius: 10px;
}

.tasks-header {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    display: flex;
    justify-content: space-between;
    background-color: #188dcc;
    color: white;
    padding: 2rem 1rem 1.5rem 1rem;
}

.tasks-content {
    padding: 2rem 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.tasks-content li {
    position: relative;
}

.tasks-content label::after {
    content: "";
    background: black;
    opacity: 0.08;
    position: absolute;
    top: 100%;
    left: 2.1rem;
    right: 0;
    height: 2px;
}

.tasks-header > h3 {
    font-weight: 600;
}

[type='checkbox']:checked + label {
    text-decoration: line-through;
}

.task-new {
    padding: 0 1rem 3rem 3.3rem;
    display: flex;
    gap: 1rem;
}

.task-new > input {
    border: 0;
    border-bottom: 1px solid black;
    width: 70%;
}

.tasks-container input[type=checkbox] + label {
    margin: 0.2em;
    cursor: pointer;
    padding: 0.2em;
}


/* PRODUCTS TAB */
.main-content .products-container .card {
    overflow: hidden;
}

.main-content .products-container .card img {
    width: 100%;
    object-fit: cover;
    transition: transform .5s ease;
}

/* PROJECTS TAB */
.projects {
    background-color: #e2e8f0;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
}

.project-card {
    background-color: #ffffff;
    margin: 15px;
    border-radius: 10px;
    box-shadow: 3px 3px 3px rgb(209, 208, 208);
    border-left: 7px solid #188dcc;
    display: grid;
}

.project-card-text {
    padding: 1rem 7rem 0 1.5rem;
}

.project-card-text p {
    margin-top: revert;
    margin-bottom: revert;
}

.project-card-title {
    font-weight: bolder;
    font-size: larger;
    line-height: 0;
}

.project-card-icons {
    justify-self: end;
    padding: 0 2rem 1rem 0;
    display: flex;
    gap: 2rem;
}

.project-card-icons img {
    height: 1.5rem;
}

@media only screen and (max-width: 1320px) {
    .main-container {
        grid-template-columns: auto;
    }

    .sidebar {
        display: none;
    }

    .title {
        text-align: center;
    }

    .header {
        display: grid;
        grid-template-columns: 90px auto;
        align-items: center;
    }

    #header-hamburger {
        display: block;
        font-size: 1.5rem;
        text-align: center;
    }

    .header-top-left {
        margin-right: 2rem;
    }

    .header-top-right > div > a {
        display: none;
    }
}

@media only screen and (max-width: 560px) {
    .header-top {
        padding: 10px 0 10px 0;
    }

    .header-top-right {
        display: none;
    }

    .projects {
        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    }

    .project-card-text {
        padding: 1rem 1rem 0 1.5rem;
    }
}

